# windows_auto_hash_contributions

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resource.h  resources.rc
.github/workflows/: c-cpp.yml
